# watchmaker

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .landscape.yml  .mergify.yml  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TESTING_CONTRIBUTIONS_DOCUMENTATION.md  appveyor.yml  azure-pipelines.yml  entry_point.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  watchmaker.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  dependabot_hack.yml  integration.yml  lint.yml  release.yml
ci/: Dockerfile  Dockerfile.pyapp  appveyor-bootstrap.py  appveyor-download.py  appveyor-with-compiler.cmd  azure-pipelines-template.yml  build.cmd  build.ps1  build.sh  build_pyapp.ps1  build_pyapp.sh  codebuild_start_wait.sh  deploy.sh  prep_docker.sh  prep_docker_pyapp.sh  run_with_env.cmd  travis_pypi_setup.py  travis_set_build.py
ci/local/: Dockerfile  build_dox.sh
ci/pyinstaller/: hook-watchmaker.py  sats-template.json.template
ci/pyinstaller/elx/: hook-watchmaker.py
ci/pyinstaller/win/: hook-watchmaker.py
contrib/: watchmaker_sync.sh  watchmaker_sync.sh.md
docs/: CentOS-Stream.md  api.md  changelog.md  common_findings-EL7.md  conf.py  configuration.md  contributing.md  faq.md  faq.md.html  index.md  index.rst  installation.md  requirements.txt  scap.md  usage.md
docs/_static/: theme_overrides.css
docs/customization/: AddFormulaToTop-Jinja-RedHat.txt  AddFormulaToTop-Simple-RedHat.txt  ConfigYaml.md  Example-config.yaml  FormulaTop-ALL.txt  FormulaTop-ALL_reordered.txt  FormulaUpdates.md  NewFormulas.md  RemoveFormulaFromTop-Simple-RedHat.txt  SaltContent.md  SiteFormulae.md  SiteParameters.md  index.md
docs/files/bootstrap/: watchmaker-bootstrap.ps1
docs/files/cfn/parameter-maps/: watchmaker-lx-autoscale.params.json  watchmaker-lx-instance.params.json  watchmaker-win-autoscale.params.json  watchmaker-win-instance.params.json
docs/files/cfn/templates/: README.md  watchmaker-lx-autoscale.template  watchmaker-lx-instance.template  watchmaker-win-autoscale.template  watchmaker-win-instance.template
docs/files/templates/lx-autoscale/: watchmaker-lx-autoscale.template  watchmaker-lx-autoscale.tf
docs/files/templates/lx-instance/: watchmaker-lx-instance.template  watchmaker-lx-instance.tf
docs/files/templates/parameter-maps/: watchmaker-lx-instance.params.json  watchmaker-win-instance.params.json
docs/files/templates/win-autoscale/: watchmaker-win-autoscale.template  watchmaker-win-autoscale.tf
docs/files/templates/win-instance/: watchmaker-win-instance.template  watchmaker-win-instance.tf
docs/findings/: C2StoSTIG-delta.md  Gotchas-EL7.md  common_findings-table-el7.md  el7.md  el8.md  el9.md  index.md  index.rst
docs/gotchas/: EL7-sudo.md  EL8-OpenSSHkeyLogins.md  EL8-X11tunneling.md  index.md
docs/troubleshooting/: NoBoto3-LogSnippet.txt  index.md
docs/troubleshooting/Linux/: cloud-init-output.log.md  cloud-init.log.md  index.md  journald.md  journald.rst  salt_call.debug.log.md  var-log-messages.md  watchmaker.log.md
docs/troubleshooting/Windows/: c_amazon_EC2Launch_Log_UserdataExecution.log.md  c_amazon_EC2Launch_v2_Log_UserdataExecution.log.md  c_watchmaker_logs_salt_call.debug.md  c_watchmaker_logs_watchmaker.log.md  index.md  salt.debug.join-fail-expanded.txt  salt.debug.join-fail-stream.txt
docs/usage.d/: userData-Linux-bash.sh  userData-Linux-cloud_config.yml  userData-Windows.ps1
requirements/: basics.txt  build.txt  check.txt  deploy.txt  docs-check.txt  docs.txt  pip.txt  report.txt  test.txt  tox.txt
scripts/: Watchmaker.py  watchmaker.py
src/watchmaker/: __init__.py  __main__.py  cli.py
src/watchmaker/_vendor/: __init__.py
src/watchmaker/conditions/: __init__.py
src/watchmaker/config/: __init__.py  watchmaker_config.py
src/watchmaker/config/status/: __init__.py
src/watchmaker/exceptions/: __init__.py
src/watchmaker/logger/: __init__.py
src/watchmaker/managers/: __init__.py  base.py  platform.py  platform_manager.py  worker_manager.py  workers.py
src/watchmaker/static/: __init__.py  config.yaml
src/watchmaker/static/salt/content/pillar/: map.jinja  top.sls
src/watchmaker/static/salt/content/states/: top.sls
src/watchmaker/static/shell/bootstrappers/: watchmaker-bootstrap.ps1  watchmaker-bootstrap.py  watchmaker-bootstrap.sh
src/watchmaker/status/: __init__.py
src/watchmaker/status/providers/: __init__.py  abstract.py  aws.py  aws_status_provider.py  azure.py  azure_status_provider.py  status_provider.py
src/watchmaker/utils/: __init__.py
src/watchmaker/utils/conditions/: __init__.py
src/watchmaker/utils/config/: __init__.py  watchmaker_config.py
src/watchmaker/utils/imds/: __init__.py
src/watchmaker/utils/imds/detect/: __init__.py
src/watchmaker/utils/imds/detect/providers/: __init__.py  aws_provider.py  azure_provider.py  provider.py
src/watchmaker/utils/urllib/: __init__.py  request_handlers.py
src/watchmaker/utils/urllib_utils/: __init__.py  request_handlers.py
src/watchmaker/workers/: __init__.py  base.py  salt.py  saltbase.py  yum.py
test/: test_watchmaker.py
tests/: aws_provider_test.py  conftest.py  test_config.py  test_logger.py  test_saltworker.py  test_status_config.py  test_utils.py  test_watchmaker.py
tests/imds-providers/: test_aws_provider.py  test_azure_provider.py  test_imds.py
tests/providers/: test_aws_provider.py  test_azure_provider.py  test_imds.py
tests/resources/: __init__.py  config_with_computer_name_and_pattern.yaml  config_with_computer_name_pattern.yaml  config_with_status.yaml  config_without_status.yaml
tests/status/: test_status.py
userdata-bootstraps/: windows-image-bootstrap.ps1
watchmaker/: __init__.py
watchmaker/managers/: base.py  workers.py
watchmaker/static/: config.yaml
watchmaker/static/shell/bootstrappers/: linux-image-bootstrap.py  watchmaker-bootstrap.ps1  watchmaker-bootstrap.sh  windows-image-bootstrap.ps1
watchmaker/workers/: base.py  salt.py  yum.py
(+14 files in other folders)
