[metadata]
name = watchmaker
description = Applied Configuration Management
version = 0.7.2
author = Plus3IT Maintainers of Watchmaker
author_email = projects@plus3it.com
url = https://github.com/plus3it/watchmaker
license = Apache Software License 2.0
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    click
    futures;python_version<"3"
    six
    PyYAML
    wheel<=0.29.0;python_version<"2.7"
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    wam = watchmaker.cli:main
    watchmaker = watchmaker.cli:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    .eggs,
    *.egg,
    build,
    dist,
    htmlcov,
    */static/salt/formulas/*
ignore = FI15,FI16,FI17,FI5,D107

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    __pycache__
    dist
    build
    htmlcov
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short

[isort]
force_single_line=False
line_length=79
known_first_party=watchmaker
default_section=THIRDPARTY
forced_separate=test_watchmaker
not_skip = __init__.py
skip =
    .tox
    build
skip_glob =
    */static/salt/formulas/*
