# pyup: ignore file

[metadata]
name = watchmaker
description = Applied Configuration Management
version = 0.26.0
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Plus3IT Maintainers of Watchmaker
author_email = projects@plus3it.com
url = https://github.com/plus3it/watchmaker
license = Apache Software License 2.0
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    backoff;python_version>="3.6"
    backoff<=1.8.0;python_version<="2.7"
    click
    defusedxml;platform_system=="Windows"
    distro;python_version>="3.6"
    distro<=1.6.0;python_version<="2.7"
    importlib_metadata
    importlib_resources
    futures;python_version<"3"
    six
    pywin32;platform_system=="Windows"
    PyYAML;python_version>="3.6"
    PyYAML<=5.2;python_version<="2.7"
    compatibleversion>=0.1.2
    oschmod>=0.1.3
package_dir =
    = src
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    wam = watchmaker.cli:main
    watchmaker = watchmaker.cli:main

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    .eggs,
    *.egg,
    build,
    dist,
    htmlcov,
    */static/salt/formulas/*
    */_vendor/*
ignore = FI15,FI16,FI17,FI18,FI5,D107,W503,W504

[tool:pytest]
mock_use_standalone_module = true
norecursedirs =
    .git
    .tox
    .env
    __pycache__
    dist
    build
    htmlcov
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short

[isort]
force_single_line=False
line_length=79
known_first_party=watchmaker
default_section=THIRDPARTY
forced_separate=test_watchmaker
skip =
    .tox
    build
skip_glob =
    */static/salt/formulas/*
