# pyup: ignore file

[metadata]
name = watchmaker
description = Applied Configuration Management
version = 0.29.4
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Plus3IT Maintainers of Watchmaker
author_email = projects@plus3it.com
url = https://github.com/plus3it/watchmaker
license = Apache Software License 2.0
platforms =
    Linux
    Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[options]
install_requires =
    backoff;python_version>="3.6"
    click
    defusedxml;platform_system=="Windows"
    distro;python_version>="3.6"
    importlib_metadata
    importlib_resources
    pywin32;platform_system=="Windows"
    PyYAML;python_version>="3.6"
    compatibleversion>=0.1.2
    oschmod>=0.1.3
package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    wam = watchmaker.cli:main
    watchmaker = watchmaker.cli:main

[options.packages.find]
where = src

[tool:pytest]
mock_use_standalone_module = true
norecursedirs =
    .git
    .tox
    .env
    __pycache__
    dist
    build
    htmlcov
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfsw
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short
